--- a/app_22oktlegacy/templates/index.html
+++ b/app_22oktlegacy/templates/index.html
@@ -11,6 +11,7 @@
         <a href="feltoltes/kerulet/">Kerületek feltöltése</a>
         <a href="feltoltes/varosresz/">Városrészek feltöltése</a>
         <a href="feltoltes/kapcsolat/">Kapcsolatok feltöltése</a>
+        <a href="feladat/2/">2. feladat: névvel rendelkező kerületek</a>
     </nav>
 </body>
 </html>
